# frameworkSwiftEDA

./: .gitignore  README.md  pyproject.toml
examples/: analise_IMDB.ipynb  analise_champion_br.ipynb  analise_titanic.ipynb  test_methods_swifteda.ipynb
examples/datasets/: AI_Tools_List.csv  dataset_campeonato_br_2007_2024_v2.xlsx
swifteda/: __init__.py  analyzer.py  loaders.py  plotting.py  reporting.py  structures.py
swifteda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swifteda/templates/: report_template.html
